--- a/package.json
+++ b/package.json
@@ -24,5 +24,17 @@
     "react-scripts": "5.0.1",
     "ts-xor": "^1.0.8",
     "typescript": "^4.8.4"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
